test/files/pos/protected-static/S.scala
package bippy

object Test extends J {
  def main(args: Array[String]): Unit = {
    bippy.J.f()
  }
}
