test/files/neg/primitive-sigs-1/B.scala
object Test {
  def main(args: Array[String]): Unit = {
    J.f(new Bippy())
  }
}
